[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "eh-system"
version = "0.1.0"
description = "Elektronik Harp Arayuz Sistemi - SDR tabanli EH masaustu uygulamasi"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

dependencies = [
    "PySide6>=6.6",
    "pyqtgraph>=0.13",
    "numpy>=1.24",
    "pyzmq>=25.0",
]

[project.scripts]
eh-system = "app.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]
